FireProjectile/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.7.0_45\bin\javadoc.exe
-author
-version
-nodeprecated
-protected
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
C:\Program Files (x86)\Greenfoot\lib\extensions\greenfoot.jar;C:\Program Files (x86)\Greenfoot\lib\bluejcore.jar;C:\Program Files (x86)\Greenfoot\lib\bluejeditor.jar;C:\Program Files (x86)\Greenfoot\lib\bluejext.jar;C:\Program Files (x86)\Greenfoot\lib\AppleJavaExtensions.jar;C:\Program Files (x86)\Greenfoot\lib\junit-4.8.2.jar;C:\Program Files (x86)\Greenfoot\lib\bluej.jar;C:\Program Files (x86)\Greenfoot\lib\commons-httpclient-3.1.jar;C:\Program Files (x86)\Greenfoot\lib\commons-logging-api-1.1.2.jar;C:\Program Files (x86)\Greenfoot\lib\commons-codec-1.3.jar;C:\Program Files (x86)\Greenfoot\lib\jl1.0.1.jar;C:\Program Files (x86)\Greenfoot\lib\opencsv-2.3.jar;C:\Users\Jim\Documents\java\move_with_arrows.zip;C:\Users\Jim\Documents\java\TestClass.zip;C:\Users\Jim\Documents\java\FireProjectile
-d
C:\Users\Jim\Documents\java\FireProjectile\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\Greenfoot\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Jim\Documents\java\FireProjectile\Car.java
<---- end of javadoc command ---->
Loading source file C:\Users\Jim\Documents\java\FireProjectile\Car.java...
C:\Users\Jim\Documents\java\FireProjectile\Car.java:12: error: ')' expected
    Projectile p = new Projectile(
              ^
C:\Users\Jim\Documents\java\FireProjectile\Car.java:12: error: illegal start of type
    Projectile p = new Projectile(
                 ^
C:\Users\Jim\Documents\java\FireProjectile\Car.java:12: error: <identifier> expected
    Projectile p = new Projectile(
                  ^
C:\Users\Jim\Documents\java\FireProjectile\Car.java:12: error: ';' expected
    Projectile p = new Projectile(
                      ^
C:\Users\Jim\Documents\java\FireProjectile\Car.java:12: error: illegal start of type
    Projectile p = new Projectile(
                                 ^
C:\Users\Jim\Documents\java\FireProjectile\Car.java:12: error: <identifier> expected
    Projectile p = new Projectile(
                                  ^
C:\Users\Jim\Documents\java\FireProjectile\Car.java:17: error: ';' expected
    public void act() 
          ^
C:\Users\Jim\Documents\java\FireProjectile\Car.java:17: error: invalid method declaration; return type required
    public void act() 
                ^
8 errors
